[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["Lucas Otten <lucas_otten@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
ipykernel = "^6.17.0"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
